# Face-Detection-app

./: CMakeLists.txt  README.md  face_detection.py
src/: facedetector.cpp  facedetector.h  main.cpp  mainwindow.cpp  mainwindow.h  videoprocessor.cpp  videoprocessor.h
